--- a/async-demo/package.json
+++ b/async-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vidly",
+  "name": "async-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "joi": "^17.11.0",
-    "mongoose": "^8.0.2"
+    "nodemon": "^3.0.1"
   }
 }
