--- a/express-demo/package.json
+++ b/express-demo/package.json
@@ -10,8 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.3.9",
+    "debug": "^4.3.4",
     "env": "^0.0.2",
     "express": "^4.18.2",
-    "joi": "^17.10.2"
+    "helmet": "^7.0.0",
+    "joi": "^17.10.2",
+    "morgan": "^1.10.0",
+    "pug": "^3.0.2"
   }
 }
