--- a/mongo-demo/package.json
+++ b/mongo-demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vidly",
+  "name": "mongo-demo",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "joi": "^17.11.0",
-    "mongoose": "^8.0.2"
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0"
   }
 }
